--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
         <div class="toggle-menu__lines"></div>
       </label>
       <ul class="header__menu">
-        <li class="header__menuItem"><a href="">{% url 'profiles' %}</a></li>
+        <li class="header__menuItem"><a href="{% url 'profiles' %}">Developers</a></li>
         <li class="header__menuItem">
           <a href="{% url 'projects' %}">Projects</a>
         </li>
